<resources>
    <string name="app_name">MapIn Events</string>


    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="fb_application_id" translatable="false">451433085473566</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb451433085473566</string>

    <string name="google_android_client_id">664628557717-vcg315ha5c2ian0uej2s5mt1bih7ipkb.apps.googleusercontent.com</string>
    <string name="google_android_client_secret">KLtVqRXohumgVXmIShaY2suq</string>


    <string name="home">Home</string>
    <string name="schedule">Schedule</string>
    <string name="agenda">Agenda</string>
    <string name="map">Map</string>
    <string name="others">Others</string>
    <string name="settings">Settings</string>
    <string name="more">More</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="sign_in_with_facebook">Sign In with Facebook</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>

    <string name="mapbox_access_token">"pk.eyJ1IjoiYW1lcmt1bWFyIiwiYSI6ImNqbjcyazk5MTYzNWQzcG54c2VuNjBzNXAifQ.5ncQ6BW74yV7blF_DCfM9Q"</string>
    <string name="no_accelerometer">Accelerometer is not present</string>
    <string name="no_magnetic">Whoops, You do not have magentometer</string>

    <string name="search_the_map">Search the Map</string>

    <string name="notification_annoucement_key">notification_annoucements</string>
    <string name="version">1.0.0</string>


    <string name="mapbox_street">1</string>
    <string name="mapbox_light">2</string>
    <string name="mapbox_dark">3</string>

    <string name="labels_halls">labels_halls</string>
    <string name="labels_stalls">labels_stalls</string>

    <string name="three_dimen_view">three_dimen_view</string>
    <string name="map_style">map_style</string>
</resources>
