<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="Map Type"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black" />


        <RadioGroup
            android:id="@+id/radio_group_map_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="center_horizontal"
            >

            <RadioButton
                android:id="@+id/street"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="4dp"
                android:background="@drawable/mapbox_street_background_drawable"
                android:button="@android:color/transparent"
                android:padding="8dp"
                android:tag="@string/mapbox_street"
                />

            <RadioButton
                android:id="@+id/light"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="4dp"
                android:background="@drawable/mapbox_light_background_drawable"
                android:button="@android:color/transparent"
                android:padding="8dp"
                android:tag="@string/mapbox_light"
                />


            <RadioButton
                android:id="@+id/dark"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="4dp"
                android:background="@drawable/mapbox_dark_background_drawable"
                android:button="@android:color/transparent"
                android:padding="8dp"
                android:tag="@string/mapbox_dark"
                />
        </RadioGroup>
        
        <!--<CheckBox-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="4dp"-->
            <!--android:padding="8dp"-->
            <!--android:text="3d View"-->
            <!--android:textAppearance="@style/TextAppearance.AppCompat.Medium"-->
            <!--/>-->



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="Labels"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/halls_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="Halls"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            />


        <CheckBox
            android:id="@+id/stalls_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="Stalls"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="View"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/threed_view_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="3d view"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"/>

    </LinearLayout>
</layout>